# ds-aa-afg-drought

./: .gitignore  .pre-commit-config.yaml  .python-version  README.Rmd  README.md  _targets.R  constructing_mixed_observational_forecast_indicator.R  ds-aa-afg-drought.Rproj  pyproject.toml  requirements.txt  wfp-chirps.R
.github/: MONITORING.md  README.md  depends.R
R/: blob_connect.R  config_blob.R  load_funcs.R  pg.R  raster_utils.R  seas5_utils.R  utils.R  utils_gee.R  zonal_tidy.R
book_afg_analysis/: 02_prioritization_rainfall.qmd  03_initial_proposal_faryab.qmd  04_snow_ndsi_swe.qmd  05_snow_melt_date.qmd  06_indicator_expansion.qmd  07_composite_observational.qmd  07_pre_season_allocation_options.qmd  08_weight_selection.qmd  09_create_cdi_thresholds.qmd  09_pre_season_allocation_options.qmd  10_asi_provincial_correlation.qmd  11_multi_year_drought.qmd  12_2026_trigger_modeling.qmd  13_2026_trigger_proposal.qmd  14_cerf_allocation_alignment.qmd  15_baseline_sensitivity.qmd  16_performance_comparison.qmd  _publish.yml  _quarto.yml  appendix_insample_vs_cv.qmd  index.qmd  intro.qmd  references.bib  references.qmd  summary.qmd
data-raw/: 01_adm_boundary_parquets.R  01_download_ecmwf_mars_gribs.py  02_process_mars_gribs_to_COGS.py  04_wfp-adm2-climate-data.R  05_process_seas5.R  06_modis_snow_cover_masked.R  07_FLDAS_SWE.R  08_exp_get_no_snow_Date.R  08_extract_snow_disappearance.qmd  09_monthly_era5_temp_precip.R  10_monthly_era5_land_multiband.R  10b_monthly_era5_land_multiband.R  11_seas5_empirical_rp_thresholds.R  12_mixed_observational_forecast_indicator.R  (+8 more)
(+41 files in other folders)
