[project]
name = "ds-aa-afg-drought"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cfgrib>=0.9.12.0",
    "eccodes>=1.7.0",
    "ecmwf-api-client>=1.6.3",
    "findlibs>=0.0.5",
    "ocha-stratus",
    "scipy>=1.13.1",
    "snuggs>=1.4.7",
    "matplotlib",
    "tqdm",
    "ipykernel>=7.1.0",
    "earthengine-api>=1.7.4",
    "geemap>=0.36.6",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort

[tool.ruff.lint.isort]
known-first-party = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.11",
]
